fix several compiler and Checkstyle warnings.